little changes with hope to fix auto orientation on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -37,10 +37,8 @@ body {
   opacity: 0;
 }
 
-.invitation-subtitle,
 .name,
 .date-time p {
-  font-size: 1.5em;
   margin: 10px 0;
   color: #ffd700;
   opacity: 0;
@@ -66,7 +64,6 @@ body {
 
 .location {
   margin-top: 20px;
-  font-size: 1.2em;
   display: none;
   color: #ffd700;
   animation: fadeInLocation 1s ease-out;
